# Ray-traversal

./: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  GraphicsObject.cpp  GraphicsObject.hpp  MersenneTwister.hpp  PLYReader.cpp  PLYReader.h  Point.hpp  PointOctree.hpp  README.md  Ray.hpp  Scene.cpp  Scene.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TriangleBoxOverlapping.cpp  TriangleBoxOverlapping.hpp  TriangleMesh.cpp  TriangleMesh.h  TrianglesOctree.hpp  UniformGrid.hpp  main.cpp
cmake_modules/: FindGLM.cmake  FindSOIL.cmake
dependencies/: bunny.ply  moai.ply
shaders/: basic.frag  basic.vert
soil/libs/: SOIL.lib
